--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+daggy = "0.8.0"
 either = "1.13.0"
+num-bigint = "0.4.6"
+petgraph = "0.6.5"
